# docs/swagger.yaml
@@ -55,6 +55,8 @@ definitions:
     type: object
   comm.UrlEntity:
     properties:
+      access_count:
+        type: integer
       created_at:
         type: string
       id:
@@ -103,6 +105,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/comm.CreateUrlRequest'
+      - description: API Key for Header
+        in: header
+        name: X-API-Key
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -128,6 +135,11 @@ paths:
       - description: URL ID
         in: path
         name: id
+        required: true
+        type: string
+      - description: API Key for Header
+        in: header
+        name: X-API-Key
         required: true
         type: string
       produces:
@@ -176,6 +188,11 @@ paths:
       - description: URL ID
         in: path
         name: id
+        required: true
+        type: string
+      - description: API Key for Header
+        in: header
+        name: X-API-Key
         required: true
         type: string
       - description: URL to be updated
